@@ -37,12 +37,10 @@ using namespace giada;
 
 
 geSoundMeter::geSoundMeter(int x, int y, int w, int h, const char* l)
-: Fl_Box    (x, y, w, h, l),
-	clip      (false),
-	mixerPeak (0.0f),
-	peak      (0.0f),
-	dbLevel   (0.0f),
-	dbLevelOld(0.0f)
+: Fl_Box      (x, y, w, h, l),
+  mixerPeak   (0.0f),
+  m_dbLevelCur(0.0f),
+  m_dbLevelOld(0.0f)
 {
 }
 
@@ -54,35 +52,23 @@ void geSoundMeter::draw()
 {
 	fl_rect(x(), y(), w(), h(), G_COLOR_GREY_4);
 
-	/* peak = the highest value inside the frame */
+	/* Compute peak level on 0.0 -> 1.0 scale. 1.0 is considered clip. */
 
-	peak = 0.0f;
-	float tmp_peak = 0.0f;
+	bool clip = std::fabs(mixerPeak) >= 1.0f ? true : false;
 
-	tmp_peak = std::fabs(mixerPeak);
-	if (tmp_peak > peak)
-		peak = tmp_peak;
+	/*  dBFS (full scale) calculation, plus decay of -2dB per frame. */
 
-	clip = peak >= 1.0f ? true : false; // 1.0f is considered clip
+	m_dbLevelCur = u::math::linearToDB(std::fabs(mixerPeak));
 
+	if (m_dbLevelCur < m_dbLevelOld && m_dbLevelOld > -G_MIN_DB_SCALE)
+		m_dbLevelCur = m_dbLevelOld - 2.0f;
 
-	/*  dBFS (full scale) calculation, plus decay of -2dB per frame */
+	m_dbLevelOld = m_dbLevelCur;
 
-	dbLevel = u::math::linearToDB(peak);
+	/* Paint the meter on screen. */
 
-	if (dbLevel < dbLevelOld && dbLevelOld > -G_MIN_DB_SCALE)
-		dbLevel = dbLevelOld - 2.0f;
-
-	dbLevelOld = dbLevel;
-
-	/* graphical part */
-
-	float px_level = 0.0f;
-	if (dbLevel < 0.0f)
-		px_level = ((w()/G_MIN_DB_SCALE) * dbLevel) + w();
-	else
-		px_level = w();
+	float pxLevel = ((w()/G_MIN_DB_SCALE) * m_dbLevelCur) + w();
 
 	fl_rectf(x()+1, y()+1, w()-2, h()-2, G_COLOR_GREY_2);
-	fl_rectf(x()+1, y()+1, (int) px_level, h()-2, clip || !m::kernelAudio::getStatus() ? G_COLOR_RED_ALERT : G_COLOR_GREY_4);
+	fl_rectf(x()+1, y()+1, (int) pxLevel, h()-2, clip || !m::kernelAudio::getStatus() ? G_COLOR_RED_ALERT : G_COLOR_GREY_4);
 }
